2016-05-26 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Removing *ivar* muon trigger from matching
	* Moving to MV2c10 70% WP - aligned with ttHbb
	** no SFs yet for MV2c10

2016-05-24 Rhys Roberts <rhys.thomas.roberts@cern.ch>
	* Added b-tagging non-prompt BDT variables to ntuple
	* Includes input variables to BDT, currently on saving shorts
	* Flag for saving float vars

2016-05-20 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Put back common loose definition
	* Include 2016 triggers
	* Include runYear flag
	* Include new 2015 repro GRL and 2016 4.22 pb-1

2016-05-18 Peter Onyisi <ponyisi@cern.ch>
	* Use ASG OR

2016-05-16 Peter Onyisi <ponyisi@cern.ch>
	* Store MV2c10-based quantities & make default (ATLASTTHML-45)
	* Update blinding for 4l (ATLASTTHML-46)

2016-05-09 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* use same truthOrigin and truthType name convention for leptons after OLR

2016-05-07 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* add LOWPT muon SF uncertainties
	* add protection to truthOrigin and truthType definitions
	* add truthOrigin and truthType for leptons after OLR

2016-05-03 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* updated b-tagging WP cuts for 20.7, add 60 and 85% nBjet variables
	* undo recommended TTVA cuts for loose leptons to loose ones
	* add mc15c PU RW file and updated config file for mc15c

2016-05-03 David Hohn <david.hohn@cern.ch>
	* add 20.7 repocessed data file list
	* small bugfix in ProductionManager

2016-05-02 David Hohn <david.hohn@cern.ch>
	* protect against vtx not having x/y coordinates in topq1 derivation
	* fix dependency compilation error

2016-05-01 David Hohn <david.hohn@cern.ch>
	* add electron_sharesTrk for offline el/mu overlap removal a la ASG, should be double checked

2016-04-29 David Hohn <david.hohn@cern.ch>
	* Move to Top,2.3.49: possibly last release for 20.1
	* Add Number of tracks in vertex: m_vtx_numTrk