@@ -212,107 +212,10 @@ void ttHMultileptonLooseEventSaver::initialize(std::shared_ptr<top::TopConfig> c
 
   //define triggers
   //Items and their PS
-  // For general information:
-  /*
-  std::vector<std::string> triggernames16
-  {   "HLT_e24_lhmedium_L1EM20VH", // < 5e33
-      "HLT_e60_lhmedium",
-      "HLT_e120_lhloose",
-      "HLT_mu24_iloose",
-      "HLT_mu24_ivarloose",
-      "HLT_mu40"
-      "HLT_e24_lhtight_iloose", // < 7e33
-      "HLT_e24_lhtight_ivarloose",
-      "HLT_e60_lhmedium",
-      "HLT_e120_lhloose",
-      "HLT_mu24_imedium",
-      "HLT_mu24_ivarmedium",
-      "HLT_mu40" 
-      };
-  
-  if(!m_doSystematics) {
-    for( std::string extra_trigger16:
-      {   "HLT_2e12_lhvloose_nod0_L12EM10VH", // < 5e33
-	  "HLT_2mu10 HLT_mu20_mu8noL1",
-	  "HLT_2e15_lhvloose_nod0_L12EM13VH", // < 7e33
-	  "HLT_2mu14 HLT_mu20_mu8noL1",
-	  "HLT_e17_lhloose_mu14",
-	  "HLT_e24_medium_L1EM20VHI_mu8noL1",
-	  "HLT_e7_medium_mu24"
-	  } )
-      {
-	triggernames16.push_back(extra_trigger16);
-      }
-  } 
-  */
-  std::set<std::string> triggernames
-  {   "HLT_mu20_iloose_L1MU15",
-      "HLT_mu50",
-      "HLT_e24_lhmedium_L1EM18VH",
-      "HLT_e24_lhmedium_L1EM20VH",
-      "HLT_e60_lhmedium", 
-      "HLT_e120_lhloose",
-      "HLT_mu24_iloose", //2016 onwards
-      "HLT_mu24_ivarloose",
-      "HLT_mu40",
-      "HLT_e24_lhtight_iloose", // < 7e33
-      "HLT_e24_lhtight_ivarloose",
-      "HLT_mu24_imedium",
-      "HLT_mu24_ivarmedium",
-      };
-  
-  if(!m_doSystematics) {
-    for( std::string extra_trigger:
-      {   "HLT_e24_lhmedium_iloose_L1EM18VH",
-	  "HLT_e24_tight_iloose",
-	  "HLT_e24_tight_iloose_L1EM20VH",
-	  "HLT_e24_lhtight_iloose_L1EM20VH", 
-	  "HLT_e26_tight_iloose",
-	  "HLT_e26_lhtight_iloose",
-	  "HLT_e60_medium",
-	  "HLT_e140_loose",
-	  "HLT_e140_lhloose", 
-	  "HLT_mu26_imedium", 
-	  "HLT_2e12_loose_L12EM10VH",
-	  "HLT_2e12_lhloose_L12EM10VH",
-	  "HLT_e17_lhloose_2e9_lhloose",
-	  "HLT_2mu14",
-	  "HLT_2mu10",
-	  "HLT_mu18_mu8noL1",
-	  "HLT_e17_loose_mu14",
-	  "HLT_e17_lhloose_mu14", 
-	  "HLT_e7_medium_mu24",
-	  "HLT_e7_lhmedium_mu24",
-	  // Added low pt threshold trigger for MM back up
-	  "HLT_mu10",
-	  "HLT_mu14",
-	  "HLT_mu18",
-	  "HLT_mu24",
-	  "HLT_e17_loose",
-	  "HLT_e17_lhloose",
-	  "HLT_e12_loose",
-	  "HLT_e12_lhloose",
-	  "HLT_e5_loose",
-	  "HLT_e5_lhloose",
-	  "HLT_e24_medium_L1EM20VHI_mu8noL1", //2016
-	  "HLT_2e12_lhvloose_nod0_L12EM10VH", // < 5e33
-	  "HLT_2mu10",
-	  "HLT_mu20_mu8noL1",
-	  "HLT_2e15_lhvloose_nod0_L12EM13VH", // < 7e33
-	  "HLT_2mu14",
-	  "HLT_mu20_mu8noL1",
-	  } )
-      {
-	triggernames.insert(extra_trigger);
-      }
-  } 
+  // defined in config files with TRIGDEC selectors
+  // "triggers" is the name of that dummy selection
 
-  for( std::string trig: triggernames) {
-    if( trig.find(" ") != std::string::npos) {
-      std::string e = "There is a space in triggername "+trig+". Please fix it.";
-      throw std::logic_error(e);
-    }
-  }
+  std::vector<std::string> triggernames = config->allTriggers("triggers");
   
   //make a tree for each systematic
   for (auto treeName : *config->systAllTTreeNames()) {
