@@ -59,11 +59,11 @@ OverlapRemovalLeptonDef Tight
 
 
 # Don't be clever
-SELECTION dummy
+SELECTION triggers
 GRL
 GOODCALO
 PRIVTX
-TRIGDEC HLT_mu20_iloose_L1MU15 HLT_mu26_imedium HLT_mu40 HLT_mu50 HLT_e24_lhmedium_L1EM18VH HLT_e24_lhmedium_L1EM20VH HLT_e24_lhmedium_iloose_L1EM18VH HLT_e26_lhtight_iloose HLT_e60_lhmedium HLT_e120_lhloose HLT_mu18_mu8noL1 HLT_2mu10 HLT_2e12_lhloose_L12EM10VH HLT_e17_lhloose_2e9_lhloose 
+TRIGDEC HLT_2e12_lhloose_L12EM10VH HLT_2e12_lhvloose_nod0_L12EM10VH HLT_2e12_loose_L12EM10VH HLT_2e15_lhvloose_nod0_L12EM13VH HLT_2mu10 HLT_2mu14 HLT_e120_lhloose HLT_e12_lhloose HLT_e12_loose HLT_e140_lhloose HLT_e140_loose HLT_e17_lhloose HLT_e17_lhloose_2e9_lhloose HLT_e17_lhloose_mu14 HLT_e17_loose HLT_e17_loose_mu14 HLT_e24_lhmedium_L1EM18VH HLT_e24_lhmedium_L1EM20VH HLT_e24_lhmedium_iloose_L1EM18VH HLT_e24_lhtight_iloose HLT_e24_lhtight_iloose_L1EM20VH HLT_e24_lhtight_ivarloose HLT_e24_medium_L1EM20VHI_mu8noL1 HLT_e24_tight_iloose HLT_e24_tight_iloose_L1EM20VH HLT_e26_lhtight_iloose HLT_e26_tight_iloose HLT_e5_lhloose HLT_e5_loose HLT_e60_lhmedium HLT_e60_medium HLT_e7_lhmedium_mu24 HLT_e7_medium_mu24 HLT_mu10 HLT_mu14 HLT_mu18 HLT_mu18_mu8noL1 HLT_mu20_iloose_L1MU15 HLT_mu20_mu8noL1 HLT_mu24 HLT_mu24_iloose HLT_mu24_imedium HLT_mu24_ivarloose HLT_mu24_ivarmedium HLT_mu26_imedium HLT_mu40 HLT_mu50
 
 SELECTION loose
 INITIAL
